<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<TextView
    android:id="@+id/title"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="16sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dip"
    android:paddingTop="4dip"
    android:text="@string/proxy_agreement_header"
/>
  
<TextView
    android:id="@+id/agreement"
    android:textStyle="bold"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/title"
    android:text="@string/proxy_agreement"
/>

<LinearLayout
    android:id="@+id/buttons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dip"
    android:layout_below="@id/agreement"  
    android:layout_centerHorizontal="true">
        
    <Button
      android:id="@+id/agreeButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/agree" />
      
    <Button
      android:id="@+id/cancelButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel" />       
  
</LinearLayout>
 />

</RelativeLayout>
</ScrollView>
